@@ -351,6 +351,8 @@ Unreleased changes (1.0-dev)
      
 131. NUTCH-695 - incorrect mime type detection by MoreIndexingFilter plugin
      (Dmitry Lihachev via siren)
+     
+132. NUTCH-694 - Distributed Search Server fails (siren)
 
 Release 0.9 - 2007-04-02
 
